[package]
name = "quex"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
confy = "0.6.1"
pest = "2.7.10"
pest_derive = "2.7.10"
pulldown-cmark = "0.12.0"
serde = "1.0.203"
serde_derive = "1.0.203"
serde_json = "1.0.127"
thiserror = "1.0.61"
time = "0.3.36"
zemen = "0.1.6"
